projects/Whack-A-Mole/style.css
body {
  height: 100vh;
  margin: 0px;
  padding: 0px;

  display: grid;
  grid-auto-columns: 1fr;
  grid-template-columns: 100%;
  grid-template-rows: min-content 1fr;
  gap: 0px 0px;
  grid-template-areas:
    "header"
    "main";
}

header {
  grid-area: header;
}

main {
  grid-area: main;

  padding: 2em 4em 4em 2em;
}

p {
  position: absolute;
  font-size: 2em;
  user-select: none;
}

p:hover {
  cursor: pointer;
}

